--- a/src/app/comman/components/UI/date-range-picker/date-range-picker.component.html
+++ b/src/app/comman/components/UI/date-range-picker/date-range-picker.component.html
@@ -1,8 +1,9 @@
 <mat-form-field appearance="fill" style="width: 100%">
-  <mat-label>{{ label }}<span class="danger">*</span></mat-label>
+  <mat-label >{{ label }}</mat-label>
 
-        <mat-date-range-input [rangePicker]="picker" 
+        <mat-date-range-input [rangePicker]="picker"   [formGroup]="fakeForm"
    >
+   
     <input
       matStartDate
       matInput
@@ -11,7 +12,8 @@
       (input)="picker.open()"
       (focus)="picker.open()"
       (dateChange)="updateValue()"
- 
+      [errorStateMatcher]="matcher"
+      [required]="false"
     />
     <input
       matEndDate
@@ -21,6 +23,7 @@
       (input)="picker.open()"
       (focus)="picker.open()"
       (dateChange)="updateValue()"
+      [errorStateMatcher]="matcher"
     
     />
   </mat-date-range-input>
