--- a/src/app/private/change-password/change-password.component.html
+++ b/src/app/private/change-password/change-password.component.html
@@ -1,7 +1,8 @@
-<div class="container ">
+<h3 class="change-password-header">Change Password</h3>
+<div class="container">
   <div class="card shadow-sm">
-    <div class="card-header d-flex justify-content-between align-items-center">
-      <h3 class="mb-0a">Change Password</h3>
+    <div class="">
+      
 
     </div>
     <div class="card-body change-password">
