--- a/src/app/private/change-password/change-password.component.scss
+++ b/src/app/private/change-password/change-password.component.scss
@@ -4,4 +4,9 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    margin-top: 75px;
+}
+.change-password-header{
+    margin-left: 10px;
+    margin-right: 10px;
 }
