--- a/src/app/private/projects/projects.component.scss
+++ b/src/app/private/projects/projects.component.scss
@@ -98,4 +98,38 @@
   margin-right: 10px;
 }
 
+.filter-chips{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+button.chips-clear {
+  border: 1px solid #92949d;
+  border-radius: 10px;
+  margin-right: 15px;
+  height: 33px;
+  color: var(--mi-chips-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  background: none;
+}
 
+.loader-overlay {
+  position: absolute;
+  top: 40px;
+  left: 0;
+  bottom: 60px;
+  width: 100%;
+  height: 100%;
+  background:var(--ag-bg-color);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ag-projects{
+  position: relative;
+}
