--- a/src/app/private/update-profile/update-profile.component.html
+++ b/src/app/private/update-profile/update-profile.component.html
@@ -1,3 +1,4 @@
+<h3 class="edit-profile-header"><b>Update Profile</b></h3>
 <div class="update-profile">
   <div class="auth-wrapper v3">
     <div class="auth-form">
@@ -6,7 +7,7 @@
         <form [formGroup]="ProfileGroup">
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-end mb-4">
-              <h3 class="mb-0"><b>Update Profile</b></h3>
+            
             </div>
             <div class="row">
               <div class="col-md-6">
