--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@use '@angular/material' as mat;
-@import '../node_modules/bootstrap/scss/bootstrap.scss';
-@import '../node_modules/bootstrap/scss/variables';
+@use "@angular/material" as mat;
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/variables";
 // @import 'node_modules/bootstrap/scss/variables-dark';
 
-
-@import 'scss/settings/color-variables';
-@import 'scss/settings/theme-variables';
-@import 'scss/settings/bootstrap-variables';
+@import "scss/settings/color-variables";
+@import "scss/settings/theme-variables";
+@import "scss/settings/bootstrap-variables";
 
 // bootstrap import
 // @import 'scss/bootstrap/bootstrap.scss';
@@ -16,33 +15,33 @@
 // @import 'node_modules/bootstrap/scss/utilities/api';
 
 // main framework
-@import 'scss/themes/generic.scss';
-@import 'scss/themes/general.scss';
+@import "scss/themes/generic.scss";
+@import "scss/themes/general.scss";
 
-@import 'scss/themes/components/components.scss';
+@import "scss/themes/components/components.scss";
 
 // theme
-@import 'scss/themes/layouts/menu/sidebar.scss';
-@import 'scss/themes/layouts/navbar/navbar.scss';
-@import 'scss/themes/layouts/pc-common.scss';
-@import 'scss/themes/layouts/breadcrumb/breadcrumb.scss';
-@import 'scss/themes/layouts/footer/footer.scss';
+@import "scss/themes/layouts/menu/sidebar.scss";
+@import "scss/themes/layouts/navbar/navbar.scss";
+@import "scss/themes/layouts/pc-common.scss";
+@import "scss/themes/layouts/breadcrumb/breadcrumb.scss";
+@import "scss/themes/layouts/footer/footer.scss";
 
-@import 'scss/themes/preset-style.scss';
+@import "scss/themes/preset-style.scss";
 
-@import 'ngx-toastr/toastr';
+@import "ngx-toastr/toastr";
 
 .validation-message {
-    color: red;
-    font-size: 14px;
+  color: red;
+  font-size: 14px;
 }
 
-.danger{
-    color: red;
+.danger {
+  color: red;
 }
 
-.form-control{
-    border: 1px solid #a3a3a3;
+.form-control {
+  border: 1px solid #a3a3a3;
 }
 
 .bold-header {
@@ -51,184 +50,186 @@
   background-color: var(--ag-header-bg);
   color: var(--ag-header-color);
   font-size: 13px;
- 
 }
-
 
 .ag-cell-value {
-    font-size: 13px !important;
+  font-size: 13px !important;
 }
 .navbar-wrapper.ng-tns-c2368812120-0 {
-    border-right: solid 1px #a3a3a3;
+  border-right: solid 1px #a3a3a3;
 }
 
-
-button.btn.btn-primary{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+button.btn.btn-primary {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 a {
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 15px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 15px;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: var(--bs-body-bg-color);}
-.ag-root-wrapper.ag-layout-normal.ag-ltr{
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: var(--bs-body-bg-color);
+}
+.ag-root-wrapper.ag-layout-normal.ag-ltr {
   background-color: var(--ag-bg-color) !important;
-
 }
-.ag-row{
-    background-color: var(--ag-bg-color) !important;
-    color: var(--ag-color);
+.ag-row {
+  background-color: var(--ag-bg-color) !important;
+  color: var(--ag-color);
 }
-.ag-paging-panel{
-    color: var(--ag-color);
-  
+.ag-paging-panel {
+  color: var(--ag-color);
 }
-.ag-picker-field-wrapper{
-   background-color: var(--ag-dropdown-bg-color) !important;
+.ag-picker-field-wrapper {
+  background-color: var(--ag-dropdown-bg-color) !important;
 }
 
 .mat-mdc-form-field-subscript-wrapper.mat-mdc-form-field-bottom-align {
-    height: 0;
+  height: 0;
 }
 
-.m-header{
+.m-header {
   display: flex;
 }
 
 //mat-tab
 
-
 app-tabs {
-    width: 285px  !important
-};
-
-mat-label{
-    font-size: 14px !important;
+  width: 285px !important;
 }
 
-  .mat-icon {
-    // padding-top: 4px;
-    margin-right: 5px;
+mat-label {
+  font-size: 14px !important;
 }
 
+.mat-icon {
+  // padding-top: 4px;
+  margin-right: 5px;
+}
 
 .ag-picker-field-display {
-    color: var(--ag-color);
+  color: var(--ag-color);
 }
 .ag-pinned-right-header {
-    background: var(--ag-header-bg) !important;
+  background: var(--ag-header-bg) !important;
 }
 
 .ag-header-viewport {
-    background: var(--ag-header-bg) !important;
+  background: var(--ag-header-bg) !important;
 }
 //Dark theme
 
 html {
-  color-scheme:  light;
-  @include mat.theme((
-    color: mat.$azure-palette,
-
-  ));
+  color-scheme: light;
+  @include mat.theme(
+    (
+      color: mat.$azure-palette,
+    )
+  );
 }
 
-html.dark-mode{
-      color-scheme:  dark;
-  @include mat.theme((
-    color: mat.$azure-palette,
-  ));
+html.dark-mode {
+  color-scheme: dark;
+  @include mat.theme(
+    (
+      color: mat.$azure-palette,
+    )
+  );
 }
 
 // mat-ui
 
-.label-mi{
+.label-mi {
   color: var(--mi-label-color);
 }
 
 .ag-row-hover {
-    background-color:var(--ag-hover-bg) !important;
+  background-color: var(--ag-hover-bg) !important;
 }
 .ag-column-hover {
-    background-color:var(--ag-hover-bg) !important;
+  background-color: var(--ag-hover-bg) !important;
 }
 .ag-filter {
   background-color: var(--ag-filter-bg);
 }
 .ag-input-field-input {
- background-color: var(--ag-dropdown-bg-color);
- color: var(--ag-color );
+  background-color: var(--ag-dropdown-bg-color);
+  color: var(--ag-color);
 }
 
 .ag-input-field-input::placeholder {
-
- color: var(--ag-color) !important;
+  color: var(--ag-color) !important;
 }
 
 .action-icons i {
-    font-size: 14px !important;
+  font-size: 14px !important;
 }
 
-.action-icons{
+.action-icons {
   margin-top: 4px;
   height: 28px;
   width: 28px;
 }
 .mat-mdc-text-field-wrapper.mdc-text-field.mdc-text-field--filled {
-    // margin-bottom: 24px;
-    height: 50px;
+  // margin-bottom: 24px;
+  height: 50px;
 }
-.card .card-header{
-  border:0px;
+.card .card-header {
+  border: 0px;
 }
-.card{
+.card {
   border: 0px;
 }
 
 a.sidebar-items.ng-tns-c928852301-0:hover {
-    color: #0d6efd;
+  color: #0d6efd;
 }
 mat-toolbar.mat-toolbar.mat-primary.mat-toolbar-single-row {
-    background: var(--mi-toggle-bg);
+  background: var(--mi-toggle-bg);
 }
 
 //add and edit form
 
 .project-btn-wrapper {
-    width: 100% !important;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-     margin-right: 100px;
+  width: 100% !important;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 100px;
 
-    /* text-align: center !important; */
+  /* text-align: center !important; */
 }
 
-.reset-btn{
-    margin-left: 10px;
-    margin-right: 20px;
+.reset-btn {
+  margin-left: 10px;
+  margin-right: 20px;
 }
 
-.mb-3{
+.mb-3 {
   margin-bottom: 0px !important;
 }
 
-.validation-message{
+.validation-message {
   height: 32px;
 }
 
-.mat-mdc-form-field-focus-overlay{
-  background-color:var(--mat-sys-surface-variant);
+.mat-mdc-form-field-focus-overlay {
+  background-color: var(--mat-sys-surface-variant);
 }
 
-.login-btn{
+.login-btn {
   width: 460px !important;
-} 
+}
 
-.ag-tooltip{
+.ag-tooltip {
   background-color: var(--ag-bg-color);
   color: var(--ag-color);
 }
@@ -253,39 +254,47 @@ html.dark-mode {
   --pc-header-submenu-background: #1e1e1e;
   --pc-header-submenu-color: #d6d6d6;
   --pc-container-bg-color: #1e1e1e;
- --pc-dropdown-menu-bg-color: #1e1e1e;
- --pc-dropdown-menu-color:#d6d6d6;
- --pc-card-bg-color:#1e1e1e;
-//  --pc-card-border-color:#a7a7a7;
- --pc-dropdown-active-bg-color:#1e1e1e;
-  --pc-dropdown-menu-inactive-color:#d6d6d6 !important;  
-  --bs-body-bg-color:#1e1e1e;
-  --ag-bg-color:#1e1e1e !important;
+  --pc-dropdown-menu-bg-color: #1e1e1e;
+  --pc-dropdown-menu-color: #d6d6d6;
+  --pc-card-bg-color: #1e1e1e;
+  //  --pc-card-border-color:#a7a7a7;
+  --pc-dropdown-active-bg-color: #1e1e1e;
+  --pc-dropdown-menu-inactive-color: #d6d6d6 !important;
+  --bs-body-bg-color: #1e1e1e;
+  --ag-bg-color: #1e1e1e !important;
   --ag-color: #d6d6d6 !important;
-  --ag-dropdown-bg-color:#1e1e1e !important;
-  --mi-label-color:#d6d6d6;
-  --ag-hover-bg:#2f2f2f !important;
+  --ag-dropdown-bg-color: #1e1e1e !important;
+  --mi-label-color: #d6d6d6;
+  --ag-hover-bg: #2f2f2f !important;
   --ag-even-row-bg: #0e0e0e !important;
-  --ag-header-bg:#0e0e0e;
-  --ag-header-color:rgb(220, 220, 220);
-   --ag-filter-bg:#101010;
-   --mi-toggle-bg:#1e1e1e;
-   --ag-light-hover: #222326af;
+  --ag-header-bg: #0e0e0e;
+  --ag-header-color: rgb(220, 220, 220);
+  --ag-filter-bg: #101010;
+  --mi-toggle-bg: #1e1e1e;
+  --ag-light-hover: #222326af;
+  --mi-chips-color: white;
 }
 .search-input-container {
-    display: flex;
-    height: 45px;
-    align-items: center;
+  display: flex;
+  height: 45px;
+  align-items: center;
 }
 
 .search-select {
-    border: none;
-    background: none;
-    margin-left: 10px;
+  border: none;
+  background: none;
+  margin-left: 10px;
 }
 
 button.btn.btn-danger.action-icons {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.mat-mdc-form-field-required-marker {
+  color: red;
+}
+.ag-input-field-label {
+  color: var(--ag-color);
 }
