--- a/src/app/private/add-project/add-project.component.html
+++ b/src/app/private/add-project/add-project.component.html
@@ -214,10 +214,10 @@
               [endControl]="projectForm.controls['projectDeadlineDate']"
             />
             <div class="validation-message">
-              @if((projectForm.controls['projectStartDate'].errors?.['required']
-              && projectForm.controls['projectStartDate'].touched )&&
-              (projectForm.controls['projectStartDate'].errors?.['required'] &&
-              projectForm.controls['projectDeadlineDate'].touched)){
+              @if (
+                (projectForm.controls['projectStartDate'].errors?.['required'] && projectForm.controls['projectStartDate'].touched) ||
+                (projectForm.controls['projectDeadlineDate'].errors?.['required'] && projectForm.controls['projectDeadlineDate'].touched)
+              ) {
               <span>*Please select start and end date</span>
               }
             </div>
