--- a/src/app/private/projects/projects.component.html
+++ b/src/app/private/projects/projects.component.html
@@ -8,7 +8,7 @@
         placeholder="Search..."
         class="search-input"
         [(ngModel)]="searchInput"
-        (input)="onFilterBoxChanged()"
+        (input)="onSearchChanged()"
       />
     </div>
 
