--- a/src/app/comman/components/UI/tabs/tabs.component.scss
+++ b/src/app/comman/components/UI/tabs/tabs.component.scss
@@ -3,4 +3,12 @@
 }
 li{
     padding: 5px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+span{
+    margin-top: 4px;
 }
