--- a/src/app/private/change-password/change-password.component.html
+++ b/src/app/private/change-password/change-password.component.html
@@ -1,78 +1,75 @@
 <h3 class="change-password-header">Change Password</h3>
 <div class="container">
   <div class="card shadow-sm">
-    <div class="">
-      
-
-    </div>
+    <div class=""></div>
     <div class="card-body change-password">
       <form [formGroup]="ChangePasswordForm">
-        
-          <div class="row">
-            <div class="form-group mb-3">
-              <app-input-box
-                label="Current Password"
-                type="password"
-                placeholder="Enter Current Password"
-                name="current_password"
-                formControlName="currentPass"
-              />
-              <div class="validation-message">
-                @if(ChangePasswordForm.controls['currentPass'].invalid &&
-                ChangePasswordForm.controls['currentPass'].touched){
-                <span>*Please enter current password</span>
-                }
-              </div>
+        <div class="row">
+          <div class="form-group mb-3">
+            <app-input-box
+              label="Current Password"
+              type="password"
+              placeholder="Enter Current Password"
+              name="current_password"
+              formControlName="currentPass"
+            />
+            <div class="validation-message">
+              @if(ChangePasswordForm.controls['currentPass'].invalid &&
+              ChangePasswordForm.controls['currentPass'].touched){
+              <span>*Please enter current password</span>
+              }
             </div>
-
-            <div class="form-group mb-3">
-              <app-input-box
-                label="New Password"
-                type="password"
-                placeholder="Enter New Password"
-                name="new_password"
-                formControlName="newPass"
-              />
-              <div class="validation-message">
-                @if(ChangePasswordForm.controls['newPass'].errors?.['required']
-                && ChangePasswordForm.controls['newPass'].touched){
-                <span>*Please enter new password</span>
-                } @else if
-                (ChangePasswordForm.controls['newPass'].errors?.['pattern']) {
-                <span>*Password is invalid </span>
-                }
-              </div>
-            </div>
-            <div class="form-group mb-3">
-              <app-input-box
-                label="Confirm Password"
-                type="password"
-                placeholder="Enter Confirm Password"
-                name="confirm_pass"
-                formControlName="confirmPass"
-              />
-              <div class="validation-message">
-                @if(ChangePasswordForm.controls['confirmPass'].errors?.['required']
-                && ChangePasswordForm.controls['confirmPass'].touched){
-                <span>*Please enter confirm password</span>
-                } @else if ((ChangePasswordForm.controls['confirmPass'].value)
-                !== (ChangePasswordForm.controls['newPass'].value)) {
-                <span>New password and confirm password does not match</span>
-                }
-              </div>
-            </div>
-            
-
-              <div class="change-password" style="display: flex; justify-content: center;">
-                <app-button
-                  [class]="'btn btn-primary project-btn'"
-                  (click)="ChangePassword()"
-                  [label]="' Change Password'"
-                  icon="lock_reset"
-                />
-              </div>
-
           </div>
+
+          <div class="form-group mb-3">
+            <app-input-box
+              label="New Password"
+              type="password"
+              placeholder="Enter New Password"
+              name="new_password"
+              formControlName="newPass"
+            />
+            <div class="validation-message">
+              @if(ChangePasswordForm.controls['newPass'].errors?.['required'] &&
+              ChangePasswordForm.controls['newPass'].touched){
+              <span>*Please enter new password</span>
+              } @else if
+              (ChangePasswordForm.controls['newPass'].errors?.['pattern']) {
+              <span>*Password is invalid </span>
+              }
+            </div>
+          </div>
+          <div class="form-group mb-3">
+            <app-input-box
+              label="Confirm Password"
+              type="password"
+              placeholder="Enter Confirm Password"
+              name="confirm_pass"
+              formControlName="confirmPass"
+            />
+            <div class="validation-message">
+              @if(ChangePasswordForm.controls['confirmPass'].errors?.['required']
+              && ChangePasswordForm.controls['confirmPass'].touched){
+              <span>*Please enter confirm password</span>
+              } @else if ((ChangePasswordForm.controls['confirmPass'].value) !==
+              (ChangePasswordForm.controls['newPass'].value)) {
+              <span>New password and confirm password does not match</span>
+              }
+            </div>
+          </div>
+
+          <div
+            class="change-password"
+            style="display: flex; justify-content: center"
+          >
+            <app-button
+              [class]="'btn btn-primary project-btn'"
+              (click)="ChangePassword()"
+              [label]="' Change Password'"
+              icon="lock_reset"
+            />
+          </div>
+        </div>
       </form>
     </div>
   </div>
