--- a/src/app/private/change-password/change-password.component.html
+++ b/src/app/private/change-password/change-password.component.html
@@ -59,7 +59,7 @@
           </div>
 
           <div
-            class="change-password"
+            class="change-btn"
             style="display: flex; justify-content: center"
           >
             <app-button
