--- a/src/scss/settings/theme-variables.scss
+++ b/src/scss/settings/theme-variables.scss
@@ -50,7 +50,8 @@
   --mat-sys-surface-variant: #cdd1de;
   // chips clear all button
   --mi-chips-color: #44474e;
-  --ag-column-hover-color:#98acc957;
+  --ag-column-hover-color:#aab4c4;
+  --ag-bg-hover:#b5abab;
 }
 
 $header-height: 60px;
